# AutoOps

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agent/: executor.py  graph.py  nodes.py  state.py
backend/app/connectors/: base.py  jaeger.py  loki.py  prometheus.py
backend/app/models/: incident.py
backend/app/routers/: incidents.py  webhook.py
backend/app/schemas/: incident.py
docs/: DESIGN.md  UI_DESIGN.md  specs.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: IncidentList.tsx
