[project]
name = "backend"
version = "0.1.0"
description = "AutoOps Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "uvicorn",
    "httpx",
    "prometheus-api-client",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.uv]
package = false
